...
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:hint="password"

        />
    <EditText
        android:id="@+id/confirm"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"

        android:textColor="@color/Grey"
...
        android:fontFamily="@font/jockeyone"
        android:textColor="@color/Grey"
        android:text="By signing up you agree to  our, terms,  conditions , and Privacy Policy."

        android:textSize="12sp" />
    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/BabyBlue"
        android:text="SignUp"
        android:textColor="@color/NavyBlue"
...
