...
        android:src="@drawable/rectangle_11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBottomOf="@id/rectangle_11"/>
    <AutoCompleteTextView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/searchbar"
        android:drawableLeft="@drawable/baseline_search_24"
        android:hint=" Search for friends"
        android:layout_marginTop="16dp"
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />
    <ImageButton
        android:id="@+id/settings"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
...
