<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/NavyBlue"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="MUSIC TRIVIA "
        android:textSize="16sp"
        android:fontFamily="@font/jockeyone"
        android:paddingBottom="@dimen/cardview_default_radius"
        android:textColor="@color/white"/>
    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="10dp"
        android:background="@color/NavyBlue"
        />


    <!-- Choices -->

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:fontFamily="@font/jockeyone"
        android:text="1/5 "
        android:textColor="@color/BabyBlue"
        android:layout_marginTop="50dp"
        android:textSize="15dp"

        />

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="126dp"

        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">


        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="What is the answer to this question?"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <!-- Choice 1 -->
        <TextView
            android:id="@+id/choice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Choice 1"
            android:textSize="18sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/BabyBlue"
            android:fontFamily="@font/jockeyone"/>

        <!-- Choice 2 -->
        <TextView
            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Choice 2"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/BabyBlue"
            android:fontFamily="@font/jockeyone"
            />

        <!-- Choice 3 -->
        <TextView
            android:id="@+id/choice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Choice 3"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/BabyBlue"
            android:fontFamily="@font/jockeyone"
            />

        <!-- Choice 4 -->
        <TextView
            android:id="@+id/choice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Choice 4"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/BabyBlue"
            android:fontFamily="@font/jockeyone"/>
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="Next"
        android:textColor="@color/black"
        />

</LinearLayout>
